--- a/public/front/views/orderconfirmation/index.html
+++ b/public/front/views/orderconfirmation/index.html
@@ -11,7 +11,7 @@
     <div id="page-content">
         <section id="page-title" ng-if="!isAuthenticated">
             <div class="row">
-                <div class="col-sm-12" ng-controller="AuthCtrl as vm" ng-init="vm.isMainLogin = true">
+                <div class="col-md-9 col-md-offset-3" ng-controller="AuthCtrl as vm" ng-init="vm.isMainLogin = true">
                     <!--<h1 class="mainTitle">Starter Page</h1>-->
 
                             <span class="mainDescription margin-bottom-20">
@@ -21,17 +21,11 @@
                     <form role="form" class="form-inline" id="form-sign-in-account" method="post" data-ng-submit="vm.login()">
                         <div class="form-group">
                             <div class="input-group">
-                                <div class="input-group-addon">
-                                    @
-                                </div>
-                                <input type="email" class="form-control" id="form-sign-in-email" data-ng-model="vm.email" name="email" required>
+                                <input type="email" placeholder="Enter email" class="form-control" id="form-sign-in-email" data-ng-model="vm.email" name="email" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="sr-only">
-                                Password
-                            </label>
-                            <input type="password" class="form-control" id="form-sign-in-password" data-ng-model="vm.password" name="password" required>
+                            <input type="password" placeholder="Password" class="form-control" id="form-sign-in-password" data-ng-model="vm.password" name="password" required>
                         </div>
 
                         <button class="btn btn-primary" type="submit">
@@ -109,7 +103,7 @@
                                 <!--</div>-->
                             <!--</div>-->
                         <!--</div>-->
-                        <hr/>
+                        <!--<hr/>-->
                         <!--<div class="row">-->
                             <!--<div class="col-md-6">-->
                                 <!--<div class="form-group">-->
@@ -152,16 +146,56 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <div class="panel panel-light-grey" id="panel1">
-                                    <!--<div class="panel-heading">-->
-                                        <!--<h4 class="panel-title"><strong>Card Details</strong></h4>-->
-                                        <!--<div class="panel-tools">-->
-                                            <!--<i class="fa fa-cc-visa"></i>-->
-                                            <!--<i class="fa fa-cc-mastercard"></i>-->
-                                            <!--<i class="fa fa-cc-amex"></i>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                    {{vm.LocalBookings}}
+                                <div class="panel panel-light-beige" id="panel1">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title"><strong>Card Details</strong></h4>
+                                        <div class="panel-tools">
+                                            <i class="fa fa-cc-visa"></i>
+                                            <i class="fa fa-cc-mastercard"></i>
+                                            <i class="fa fa-cc-amex"></i>
+                                        </div>
+                                    </div>
+                                    <div class="panel-body">
+                                        <div class="row">
+                                            <div class="col-md-9">
+                                                <div class="form-group">
+                                                    <label>
+                                                        Card number
+                                                    </label>
+                                                    <input type="text" name="cardNumber" class="form-control">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label class="control-label" for="securityCode">
+                                                        Security code
+                                                        <span data-toggle="tooltip" data-original-title="<div style='width:100px'>The last three digits
+                                                        on the back of your card</div>" data-html="true"
+                                                              data-placement="right"><i class="fa fa-question-circle"></i>
+                                                    </label>
+                                                    <input type="text" name="securityCode" id="securityCode" class="form-control" >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-9">
+                                                <div class="form-group">
+                                                    <label>
+                                                        Cardholder's name
+                                                    </label>
+                                                    <input type="text" name="cardholdersName" class="form-control">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label class="control-label" for="expiresOn">
+                                                        Expires on
+                                                    </label>
+                                                    <input type="text" id="expiresOn" name="expiresOn" class="form-control input-mask-date">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -259,8 +293,8 @@
                 </div>
             </div>
         </section>
-        <div class="container-fluid">
-            <div class="wrap-content container wrapper padding-bottom-30">
+        <section class="container-fluid">
+            <div class="container margin-top-50">
                 <div class="row">
                     <div class="col-sm-9">
                         <div class="row">
@@ -286,9 +320,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
     </div>
         <!-- end: PAGE TITLE -->
-
-    </div>
 </div>
