--- a/public/front/views/profile/index.html
+++ b/public/front/views/profile/index.html
@@ -13,8 +13,8 @@
         <section class="container">
             <header>
                 <ul class="nav nav-pills">
-                    <li class="active"><a ui-sref="profile"><h1 class="page-title">{{vm.userInfo.fname}} {{vm.userInfo.lname}}</h1></a></li>
-                    <!--<li><a href="my-items.html"><h1 class="page-title">My Items</h1></a></li>-->
+                    <li class="active"><a ui-sref="app.profile"><h1 class="page-title">{{vm.userInfo.fname}} {{vm.userInfo.lname}}</h1></a></li>
+                    <li><a ui-sref="app.mybookings"><h1 class="page-title">My Bookings</h1></a></li>
                 </ul>
             </header>
             <div class="row">
