--- a/public/front/views/my-bookings/index.html
+++ b/public/front/views/my-bookings/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-md-9 col-sm-9">
                     <section id="items">
-                        <div class="item list admin-view">
+                        <div class="item list admin-view" ng-repeat="booking in vm.myBookings">
                             <div class="image">
                                 <!--<div class="quick-view" data-toggle="modal" data-target="#modal-bar"><i class="fa fa-eye"></i><span>Quick View</span></div>-->
                                 <a href="item-detail.html">
@@ -57,41 +57,45 @@
                                         <div class="inner">
                                             <div class="content">
                                                 <h4>Description</h4>
-                                                <p>Curabitur odio nibh, luctus non pulvinar a, ultricies ac diam. Donec neque massa</p>
+                                            <p>{{booking.description}}</p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="item-specific">
-                                        <span title="Bedrooms"><img src="assets/img/bedrooms.png" alt="">2</span>
-                                        <span title="Bathrooms"><img src="assets/img/bathrooms.png" alt="">2</span>
-                                        <span title="Area"><img src="assets/img/area.png" alt="">240m<sup>2</sup></span>
-                                        <span title="Garages"><img src="assets/img/garages.png" alt="">1</span>
-                                    </div>
-                                    <div class="icon">
-                                        <i class="fa fa-thumbs-up"></i>
-                                    </div>
+                                    <!--<div class="item-specific">-->
+                                        <!--<span title="Bedrooms"><img src="assets/img/bedrooms.png" alt="">2</span>-->
+                                        <!--<span title="Bathrooms"><img src="assets/img/bathrooms.png" alt="">2</span>-->
+                                        <!--<span title="Area"><img src="assets/img/area.png" alt="">240m<sup>2</sup></span>-->
+                                        <!--<span title="Garages"><img src="assets/img/garages.png" alt="">1</span>-->
+                                    <!--</div>-->
+                                    <!--<div class="icon">-->
+                                        <!--<i class="fa fa-thumbs-up"></i>-->
+                                    <!--</div>-->
                                     <img src="assets/img/items/1.jpg" alt="">
                                 </a>
                             </div>
                             <div class="wrapper">
-                                <a href="item-detail.html"><h3>Cash Cow Restaurante</h3></a>
-                                <figure>63 Birch Street</figure>
+                                <a href="item-detail.html"><h3>{{booking.name}}</h3></a>
+                                <!--<figure>63 Birch Street</figure>-->
                                 <div class="info">
                                     <div class="type">
                                         <i><img src="assets/icons/restaurants-bars/restaurants/restaurant.png" alt=""></i>
-                                        <span>Restaurant</span>
+                                        <span>{{'Category'}}</span>
                                     </div>
+
+                                    <div>Selected Timings : {{booking.booking_amount}}</div>
+                                    <div>Payment Mode : {{booking.payment_mode}}</div>
+                                    <div>Total Amount : {{booking.booking_amount}}</div>
                                     <!--<div class="rating" data-rating="4"></div>-->
                                 </div>
                             </div>
                             <div class="description">
                                 <ul class="list-unstyled actions">
-                                    <li><a href="#"><i class="fa fa-pencil"></i></a></li>
-                                    <li><a href="#" class="hide-item"><i class="fa fa-eye"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-trash"></i></a></li>
+                                    <li><a href><i class="fa fa-pencil"></i></a></li>
+                                    <!--<li><a href class="hide-item"><i class="fa fa-eye"></i></a></li>-->
+                                    <li><a href><i class="fa fa-trash"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ribbon approved">
+                            <div class="ribbon" ng-class="{'approved':booking.booking_status == 1}">
                                 <i class="fa fa-check"></i>
                             </div>
                         </div>
