--- a/public/front/views/orderconfirmation/index.html
+++ b/public/front/views/orderconfirmation/index.html
@@ -44,9 +44,14 @@
             <!--</div>-->
         </section>
 
-        <section class="container-fullw bg-white">
+        <section class="container-fullw bg-white" >
             <div class="container">
-                <div class="row">
+
+                <div class="row" ng-if="!vm.LocalBookings.length">
+                    <p>Empty Cart</p>
+                    <a class="btn" ui-sref="app.home" >Continue Search</a>
+                    </div>
+                <div class="row" ng-if="vm.LocalBookings.length">
                     <div class="col-md-8">
 
                         <h3><i class="ti-user"></i> Your Details</h3>
@@ -293,7 +298,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid">
+        <section class="container-fluid" ng-if="vm.LocalBookings.length">
             <div class="container margin-top-50">
                 <div class="row">
                     <div class="col-sm-9">
