--- a/public/front/views/my-bookings/index.html
+++ b/public/front/views/my-bookings/index.html
@@ -92,7 +92,7 @@
                                 <ul class="list-unstyled actions">
                                     <li><a href><i class="fa fa-pencil"></i></a></li>
                                     <!--<li><a href class="hide-item"><i class="fa fa-eye"></i></a></li>-->
-                                    <li><a href><i class="fa fa-trash"></i></a></li>
+                                    <li><a href ng-click="vm.cancelBooking(booking)"><i class="fa fa-trash"></i></a></li>
                                 </ul>
                             </div>
                             <div class="ribbon" ng-class="{'approved':booking.booking_status == 1}">
